add bookmarks and profile pages

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,8 +11,8 @@
       <h1>Quiz App</h1>
     </header>
     <footer class="navbar">
-      <a href="index.html" class="active">Home</a>
-      <a href="bookmarks.html">Bookmarks</a>
+      <a href="index.html">Home</a>
+      <a href="bookmarks.html" class="active">Bookmarks</a>
       <a href="profile.html">Account</a>
     </footer>
   </body>
