--- a/profile.html
+++ b/profile.html
@@ -11,9 +11,9 @@
       <h1>Quiz App</h1>
     </header>
     <footer class="navbar">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="bookmarks.html">Bookmarks</a>
-      <a href="profile.html">Account</a>
+      <a href="profile.html" class="active">Account</a>
     </footer>
   </body>
 </html>
