--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <header>
       <h1>Quiz App</h1>
     </header>
+    <main>
+      <section class="questions">
+        <p>What property flips the axes in flexbox?</p>
+        <button class="show-answer" type="button">Show Answer</button>
+      </section>
+      <section class="questions">
+        <p>What is the correct HTML tag for inserting a line break?</p>
+        <button class="show-answer" type="button">Show Answer</button>
+      </section>
+      <section class="questions">
+        <p>How do you create a hyperlink in HTML?</p>
+        <button class="show-answer" type="button">Show Answer</button>
+      </section>
+      <section class="questions">
+        <p>How do you link an external CSS file to an HTML document?</p>
+        <button class="show-answer" type="button">Show Answer</button>
+      </section>
+      <section class="questions">
+        <p>What is the CSS property used to specify the font size of text?</p>
+        <button class="show-answer" type="button">Show Answer</button>
+      </section>
+    </main>
     <footer class="navbar">
       <a href="index.html" class="active">Home</a>
       <a href="bookmarks.html">Bookmarks</a>
