--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/16366750d5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -12,30 +16,41 @@
     </header>
     <main>
       <section class="questions">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What property flips the axes in flexbox?</p>
         <button class="show-answer" type="button">Show Answer</button>
       </section>
       <section class="questions">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What is the correct HTML tag for inserting a line break?</p>
         <button class="show-answer" type="button">Show Answer</button>
       </section>
       <section class="questions">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you create a hyperlink in HTML?</p>
         <button class="show-answer" type="button">Show Answer</button>
       </section>
       <section class="questions">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you link an external CSS file to an HTML document?</p>
         <button class="show-answer" type="button">Show Answer</button>
       </section>
       <section class="questions">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What is the CSS property used to specify the font size of text?</p>
         <button class="show-answer" type="button">Show Answer</button>
       </section>
     </main>
     <footer class="navbar">
-      <a href="index.html" class="active">Home</a>
-      <a href="bookmarks.html">Bookmarks</a>
-      <a href="profile.html">Account</a>
+      <a href="index.html" class="active"
+        ><i class="fa-solid fa-house fa-lg" style="color: #d7c6c6"></i
+      ></a>
+      <a href="bookmarks.html"
+        ><i class="fa-solid fa-bookmark fa-lg" style="color: #d7c6c6"></i
+      ></a>
+      <a href="profile.html"
+        ><i class="fa-solid fa-user fa-lg" style="color: #d7c6c6"></i
+      ></a>
     </footer>
   </body>
 </html>
