--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/16366750d5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
       <h1>Quiz App</h1>
     </header>
     <footer class="navbar">
-      <a href="index.html">Home</a>
-      <a href="bookmarks.html" class="active">Bookmarks</a>
-      <a href="profile.html">Account</a>
+      <a href="index.html"
+        ><i class="fa-solid fa-house fa-lg" style="color: #d7c6c6"></i
+      ></a>
+      <a href="bookmarks.html" class="active"
+        ><i class="fa-solid fa-bookmark fa-lg" style="color: #d7c6c6"></i
+      ></a>
+      <a href="profile.html"
+        ><i class="fa-solid fa-user fa-lg" style="color: #d7c6c6"></i
+      ></a>
     </footer>
   </body>
 </html>
