--- a/index.html
+++ b/index.html
@@ -19,26 +19,50 @@
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What property flips the axes in flexbox?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
       </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What is the correct HTML tag for inserting a line break?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#tags</button>
+        </div>
       </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you create a hyperlink in HTML?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#hyperlinks</button>
+        </div>
       </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you link an external CSS file to an HTML document?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
       </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>What is the CSS property used to specify the font size of text?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#text</button>
+        </div>
+        <br />
       </section>
     </main>
     <footer class="navbar">
