add hidden answer tags

--- a/index.html
+++ b/index.html
@@ -17,8 +17,19 @@
     <main>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
-        <p>What property flips the axes in flexbox?</p>
+        <p>Which property flips the axes in flexbox?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
+      </section>
+      <section hidden class="answers">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
+        <p>Which property flips the axes in flexbox?</p>
+        <button class="hide-answer" type="button">Hide Answer</button>
+        <p class="ans">flex-direction</p>
         <div class="hashtags">
           <button class="tag" type="button">#html</button>
           <button class="tag" type="button">#css</button>
@@ -34,6 +45,17 @@
           <button class="tag" type="button">#tags</button>
         </div>
       </section>
+      <section hidden class="answers">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
+        <p>What is the correct HTML tag for inserting a line break?</p>
+        <button class="hide-answer" type="button">Hide Answer</button>
+        <p class="ans">&lt;br&gt</p>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
+      </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you create a hyperlink in HTML?</p>
@@ -43,10 +65,34 @@
           <button class="tag" type="button">#hyperlinks</button>
         </div>
       </section>
+      <section hidden class="answers">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
+        <p>How do you create a hyperlink in HTML?</p>
+        <button class="hide-answer" type="button">Hide Answer</button>
+        <p class="ans">Using the &lt;a&gt; tag</p>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
+      </section>
       <section class="questions">
         <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
         <p>How do you link an external CSS file to an HTML document?</p>
         <button class="show-answer" type="button">Show Answer</button>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
+      </section>
+      <section hidden class="answers">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
+        <p>How do you link an external CSS file to an HTML document?</p>
+        <button class="hide-answer" type="button">Hide Answer</button>
+        <p class="ans">
+          Using the &lt;link&gt; tag in the &lt;head&gt; section
+        </p>
         <div class="hashtags">
           <button class="tag" type="button">#html</button>
           <button class="tag" type="button">#css</button>
@@ -62,7 +108,17 @@
           <button class="tag" type="button">#css</button>
           <button class="tag" type="button">#text</button>
         </div>
-        <br />
+      </section>
+      <section hidden class="answers">
+        <i class="fa-regular fa-bookmark fa-lg" style="color: #326969"></i>
+        <p>What is the CSS property used to specify the font size of text?</p>
+        <button class="hide-answer" type="button">Hide Answer</button>
+        <p class="ans">font-size</p>
+        <div class="hashtags">
+          <button class="tag" type="button">#html</button>
+          <button class="tag" type="button">#css</button>
+          <button class="tag" type="button">#flexbox</button>
+        </div>
       </section>
     </main>
     <footer class="navbar">
